// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Larivaar /> renders children when disabled 1`] = `
<div>
  <span
    class=""
  >
     Vahi 
  </span>
  <span
    class=""
  >
     Guru 
  </span>
</div>
`;

exports[`<Larivaar /> renders concatenated children when enabled 1`] = `
<div>
  <span
    class=""
  >
    <span
      class=""
    >
      <span
        style="filter: brightness(100%);"
      >
        V
        <wbr />
      </span>
    </span>
    <span
      class=""
    >
      <span
        style="filter: brightness(100%);"
      >
        a
        <wbr />
      </span>
    </span>
    <span
      class=""
    >
      <span
        style="filter: brightness(100%);"
      >
        h
        <wbr />
      </span>
    </span>
  </span>
  <span
    class=""
  >
    <span
      class=""
    >
      <span
        style="filter: brightness(100%);"
      >
        Gu
        <wbr />
      </span>
    </span>
    <span
      class=""
    >
      <span
        style="filter: brightness(100%);"
      >
        ru
        <wbr />
      </span>
    </span>
  </span>
</div>
`;

exports[`<Larivaar /> renders odd words as orange when larivaarAssist is enabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class=""
      >
        <span
          class=""
        >
          <span
            style="filter: brightness(100%);"
          >
            V
            <wbr />
          </span>
        </span>
        <span
          class=""
        >
          <span
            style="filter: brightness(100%);"
          >
            a
            <wbr />
          </span>
        </span>
        <span
          class=""
        >
          <span
            style="filter: brightness(100%);"
          >
            h
            <wbr />
          </span>
        </span>
      </span>
      <span
        class=""
      >
        <span
          class=" larivaar-assist-word"
        >
          <span
            style="filter: brightness(20%);"
          >
            Gu
            <wbr />
          </span>
        </span>
        <span
          class=" larivaar-assist-word"
        >
          <span
            style="filter: brightness(20%);"
          >
            ru
            <wbr />
          </span>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class=""
    >
      <span
        class=""
      >
        <span
          style="filter: brightness(100%);"
        >
          V
          <wbr />
        </span>
      </span>
      <span
        class=""
      >
        <span
          style="filter: brightness(100%);"
        >
          a
          <wbr />
        </span>
      </span>
      <span
        class=""
      >
        <span
          style="filter: brightness(100%);"
        >
          h
          <wbr />
        </span>
      </span>
    </span>
    <span
      class=""
    >
      <span
        class=" larivaar-assist-word"
      >
        <span
          style="filter: brightness(20%);"
        >
          Gu
          <wbr />
        </span>
      </span>
      <span
        class=" larivaar-assist-word"
      >
        <span
          style="filter: brightness(20%);"
        >
          ru
          <wbr />
        </span>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
